[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scenes/stages/stage1/Stage1.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/players/MalePlayer.tscn" type="PackedScene" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
Stages = [ ExtResource( 2 ) ]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="TimerLabel" type="Label" parent="."]
margin_right = 176.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_top = 25.0
margin_right = 50.0
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 350.0
margin_top = 100.0
margin_right = 850.0
margin_bottom = 200.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerPowerLabel" type="Label" parent="."]
margin_top = 50.0
margin_right = 100.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MalePlayer" parent="." instance=ExtResource( 3 )]
position = Vector2( 600, 700 )
power = 0

[node name="StageTextTimer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="add_score" from="MalePlayer" to="." method="add_score"]
[connection signal="position_update" from="MalePlayer" to="." method="_on_MalePlayer_position_update"]
[connection signal="power_update" from="MalePlayer" to="." method="_on_MalePlayer_power_update"]
[connection signal="remove_score" from="MalePlayer" to="." method="remove_score"]
[connection signal="timeout" from="StageTextTimer" to="." method="_on_StageTextTimer_timeout"]
